fix css on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -605,6 +605,15 @@ input[name='q']::placeholder {
     #header-mobile {
         margin-top: 4rem;
     }
+
+    .text-wrapper {
+        display: block; /* Stack text vertically on smaller screens */
+        animation: none; /* Disable animation on smaller screens */
+    }
+
+    .text {
+        min-width: auto; /* Allow text to wrap on smaller screens */
+    }
     
 }
 
@@ -616,6 +625,10 @@ input[name='q']::placeholder {
 
     .header-index {
         padding-top: 100px;
+    }
+
+    .header-container {
+        padding-top: 160px;
     }
     
 }
